--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ MYSQL_DATABASE_PASSWORD=""
 MYSQL_DATABASE_DB="qltv"
 MYSQL_DATABASE_HOST=""
 
+MONGO_CONFIG = "mongodb+srv://devto:YOI7852j4JgvQmS9@cluster0.w8qa7p4.mongodb.net/DEVTODB?retryWrites=true&w=majority"
