--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = "mongodb+srv://devto:YOI7852j4JgvQmS9@cluster0.w8qa7p4.mongodb.net/DEVTODB?retryWrites=true&w=majority"
+MONGODB_URI = "mongodb+srv://devto:YOI7852j4JgvQmS9@cluster0.w8qa7p4.mongodb.net/DEVTODB?retryWrites=true&w=majority"
